--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body a:hover
 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 90px;
+    font-size: 60px;
     width: 345px;
     word-break: break-all;
     line-height: 83px;
@@ -570,9 +570,7 @@ div.pp_default .pp_loaderIcon
 #about
 {
     background-color: rgb(34, 28, 90); 
-    background-image: url("demo-images/background_img_03.jpg"); 
-    background-repeat: no-repeat; 
-    background-position: center top; 
+    background-color: #290C5B;
     background-size: cover; 
     z-index: 7;
 }
@@ -645,9 +643,7 @@ div.pp_default .pp_loaderIcon
 #news
 {
     background-color: rgb(34, 28, 90); 
-    background-image: url("demo-images/background_img_04.jpg"); 
-    background-repeat: no-repeat; 
-    background-position: center center; 
+    background-color: #290C5B;
     background-size: cover; 
     z-index: 6;
 }
@@ -751,152 +747,12 @@ div.pp_default .pp_loaderIcon
 
 
 
-/* VIDEO SECTION */
-
-#video
-{
-    background-color: rgb(34, 28, 90); 
-    background-image: url("demo-images/background_img_06.jpg"); 
-    background-repeat: repeat-x; 
-    background-position: center center; 
-    background-size: auto; 
-    z-index: 5;
-}
-
-#video .section-title-holder
-{
-    background-color: rgb(255, 186, 66);
-}
-
-#video .section-title-holder span
-{
-    color: #e3a436;
-}
-
-#video .section-content-holder
-{
-    padding-bottom: 0;
-}
-
-a.video-popup-holder 
-{
-    position: relative;
-    display: block;
-}
-
-a.video-popup-holder .thumb
-{
-    width: 100%;
-}
-
-img.popup-play 
-{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    top: calc(50% - 60px);
-    left: calc(50% - 60px);
-    opacity: 0.7;
-    transition: opacity .2s linear;
-}
-
-a.video-popup-holder:hover img.popup-play
-{
-    opacity: 1;
-}
-/* END VIDEO SECTION */
-
-
-
-
-
-/* SKILLS SECTION */
-
-
-#skills
-{
-    background-color: rgb(34, 28, 90); 
-    background-image: url("demo-images/item_background_01.jpg"); 
-    background-repeat: no-repeat; 
-    background-position: left top; 
-    background-size: 100%; 
-    z-index: 4;
-}
-
-.progress_bar 
-{
-    margin-bottom: 15px;
-}
-
-.progress_bar_field_holder 
-{
-    height: 59px;
-    position: relative;
-    width: 100%;
-    vertical-align: middle;
-    overflow: hidden;
-}
-
-.progress_bar_field_holder:hover .progress_bar_title
-{
-    left: 10px;
-    color: #fff !important;
-}
-
-.progress_bar_field_holder:hover .progress_bar_percent_text
-{
-    right: 10px;
-    color: #fff !important;
-}
-
-.progress_bar_title
-{
-    position: absolute;
-    top: 8px;
-    z-index: 2;
-    left: -11px;
-    font-weight: bold;
-    color: white;
-    font-size: 45px;
-    line-height: 100%;
-    transition: color .2s linear, left .2s linear;
-}
-
-.progress_bar_percent_text
-{
-    position: absolute;
-    right: -35px;
-    top: 15px;
-    z-index: 2;
-    font-weight: bold;
-    color: white;
-    font-size: 35px;
-    line-height: 100%;
-    transition: color .2s linear, right .2s linear;
-}
-
-.progress_bar_field_perecent 
-{
-    height: 59px;    
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-/* END SKILLS SECTION */
-
-
-
-
 /* CONTACT SECTION */
 
 #contact
 {
     background-color: rgb(34, 28, 90); 
-    background-image: url("demo-images/background_img_05b.jpg"); 
-    background-repeat: no-repeat; 
-    background-position: center top; 
+    background-color: #290C5B;
     background-size: auto; 
     z-index: 3;
 }
@@ -1708,7 +1564,7 @@ footer
     }
 }
 
-.button {
+.button_reg {
     background-color: white;
     color: #290C5B;
     border: 4px solid #290C5B;
@@ -1719,13 +1575,14 @@ footer
     font-size: 16px;
     transition-duration: 0.4s;
     cursor: pointer;
+	position: relative;
 	margin-left: 45%;
 	margin-right: 45%;
-	margin-top: 42%;
+	margin-top: 20px;
 	
 }
 
-.button:hover {
-    background-color: #555555;
+.button_reg:hover {
+    background-color: #290C5B;
     color: white;
 }
