--- a/css/clear.css
+++ b/css/clear.css
@@ -14,7 +14,7 @@ time, mark, audio, video {
     border:0;
     outline: none;
     font-size:100%;
-    vertical-align:baseline;
+    vertical-align:top;
     background:transparent;
 }
 
